--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -10,47 +10,7 @@
     margin: 0.25rem 0 0.25rem 0.25rem;
   }
 
-  .delete-alert {
-    color: #cb2431;
-    font-size: 1rem;
-    font-weight: 600;
-  }
-
-  .delete-message {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    font-size: 1rem;
-    text-align: left;
-    width: 100%;
-    word-break: break-word;
-
-    span {
-      margin: 0.25rem 0;
-    }
-  }
-
-  .delete-resx-controls {
-    align-items: center;
-    display: flex;
-    justify-content: flex-end;
-    // margin-top: 2rem;
-    margin: 2rem 0 0.5rem;
-    width: 100%;
-
-    button {
-      &:last-child {
-        margin-left: 1rem;
-      }
-    }
-  }
-
-  .del-folder-loader-wrapper {
-    align-self: normal;
-    margin-right: auto;
-    position: relative;
-  }
-
+  
   img {
     max-height: 100%;
     max-width: 100%;
@@ -62,4 +22,46 @@
     margin-top: 1rem;
     padding: 0.25rem;
   }
+}
+
+.delete-resx-controls {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  margin: 2rem 0 0.5rem;
+  width: 100%;
+            
+  button {
+    &:last-child {
+      margin-left: 1rem;
+    }
+  }
+}
+
+.delete-alert {
+  color: #cb2431;
+  font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+}
+                
+.delete-message {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+  text-align: left;
+  width: 100%;
+  word-break: break-word;
+                
+  span {
+    margin: 0.25rem 0;
+  }
+}
+                
+                  
+.del-folder-loader-wrapper {
+  align-self: normal;
+  margin-right: auto;
+  position: relative;
 }
