--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -175,16 +175,23 @@ img {
 }
 
 .ps {
+  align-items: center;
   color: #8d99ae;
-  display: block;
-  font-size: 0.9rem;
-  font-style: italic;
+  display: flex;
+  font-family: Nunito, Arial, Helvetica, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  justify-content: flex-start;
+  margin-right: auto;
   margin-top: 0.25rem;
-  padding-bottom: 0.75rem;
+  min-height: 3rem;
   padding-left: 1.5rem;
-  padding-top: 0.75rem;
   text-align: left;
   width: 100%;
+
+  .ps-subtext {
+    margin-left: 0.5rem;
+  }
 }
 
 .dropzone-backdrop-icon {
