--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,6 +1,5 @@
 .explorer-container {
   height: 100%;
-  padding: 0.2rem 1rem 1rem;
 }
 
 .loader-container {
@@ -41,7 +40,7 @@
   background: #007ee5;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  height: 3.5rem;
+  height: 3rem;
   margin: 0;
   position: relative;
   width: 100%;
@@ -88,7 +87,7 @@
   justify-content: flex-start;
   padding: 1rem 0;
   padding-left: 2rem;
-  
+
   a {
     color: #2b2d42;
   }
@@ -117,7 +116,20 @@
   margin-left: 1rem;
 }
 
-.explorer-folder-path-container {
+.explorer-top-bar {
+  align-items: center;
+  background: #f2f2f2;
+  display: flex;
+  height: 3rem;
+  justify-content: flex-start;
   margin-bottom: 1rem;
-  width: 100%;
+  width: 100%;  
+}
+
+.explorer-folder-path-container {
+  min-width: 10rem;
+}
+
+.explorer-toolbar-container {
+  margin-left: auto;
 }
