--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -41,8 +41,8 @@ img {
   display: flex;
   font-size: 0.9rem;
   justify-content: flex-start;
-  margin-top: 0.5rem;
-  min-height: 2rem;
+  margin: 1rem 0;
+  min-height: 3rem;
   width: 100%;
   
   .value {
