--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -10,7 +10,21 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding-left: 1rem;
+  padding-left: 1.25rem;
+  position: relative;
+
+  &::after {
+    background: #b2d8f7;
+    content: '';
+    display: block;
+    height: 100%;
+    left: 14px;
+    position: absolute;
+    top: 0;
+    // top: 50%;
+    // transform: translateY(-50%);
+    width: 1px;
+  }
 }
 
 .folder {
@@ -28,8 +42,8 @@
 
   i {
     color: #007ee5;
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.5rem;
+    width: 1.5rem;
 
   }
 
@@ -39,8 +53,9 @@
   }
 }
 
-i {
-  height: 1rem;
-  margin-right: 0.25rem;
-  width: 1rem;
+.folder-name {
+  font-size: 0.9rem;
+  font-weight: 400;
+  margin-left: 0.25rem;
+  text-transform: lowercase;
 }
