--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -59,9 +59,9 @@
 }
 
 .info-message {
-  color: #ccc;
+  color: #bdbdbd;
   font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-weight: 300;
   left: 0;
   margin-left: auto;
