--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -13,6 +13,7 @@
   border-radius: 0.1rem;
   height: 300px;
   height: 300px;
+  margin: 0 auto;
   margin-top: 1rem;
   overflow-y: auto;
   padding-left: 0.25rem;
@@ -105,5 +106,6 @@ img {
 }
 
 .create-folder-inputs {
-  width: 100%;
+  margin-left: 0.5rem;
+  width: 10rem;
 }
