--- a/ui/src/components/notification.scss
+++ b/ui/src/components/notification.scss
@@ -1,77 +1,102 @@
 .notification-wrapper {
-  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
-  min-width: 200px;
-  max-width: 500px;
-  min-height: 30px;
-  background: #f2f2f2;
+  background: #fff;
+  border: 1px solid rgba(141, 153, 174, 0.5);
   // box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  border: 1px solid rgba(141, 153, 174, 0.5);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-  position: fixed;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
+  height: 7rem;
+  justify-content: flex-start;
   left: 0;
-  right: 0;
   margin-left: auto;
   margin-right: auto;
+  max-width: 380px;
+  min-height: 30px;
+  min-width: 150px;
+  position: fixed;
+  right: 0;
   transform: translateY(80vh);
   z-index: 1999;
-  height: 7rem;
+}
 
-  header {
-    font-size: 1rem;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    span {
-      font-weight: 500;
-      text-align: left;
+.notification-content {
+  align-items: center;
+  display: flex;
+  font-size: 0.85rem;
+  font-weight: 400;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+
+  span {
+    font-weight: 500;
+    text-align: left;
+  }
+
+  button {
+    background: none;
+    border: 0;
+    margin-left: auto;
+    padding: 0;
+
+    i {
+      height: 1rem;
+      width: 1rem;
     }
-    button {
-      border: none;
-      margin-left: auto;
-      padding: 0;
-      background: none;
-      i {
-        height: 1rem;
-        width: 1rem;
-      }
-      img {
-        max-height: 100%;
-        max-width: 100%;
-      }
+
+    img {
+      max-height: 100%;
+      max-width: 100%;
     }
   }
 }
 
 .close {
-  margin-left: auto;
-  width: 1.5rem;
   height: 1.5rem;
+  margin-left: auto;
   position: absolute;
-  top: 0.5rem;
   right: 0.5rem;
+  top: 0.5rem;
+  width: 1.5rem;
 
   svg {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 }
 
 .type-icon {
-  margin-right: 1rem;
-  margin-left: 1rem;
-  width: 2rem;
-  height: 2rem;
   color: #007ee5;
+  height: 1.5rem;
+  margin-right: 1rem;
+  width: 1.5rem;
 
   svg {
     height: 100%;
     width: 100%;
+  }
+}
+
+.status-icon {
+  height: 0.75rem;
+  left: 0.3rem;
+  position: absolute;
+  top: 0.25rem;
+  width: 0.75rem;
+
+  svg {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.info {
+  color: #4bb543;
+
+  svg {
+    fill: #4bb543;
   }
 }
