minor css fixes

--- a/ui/src/components/Popdown/popdown.scss
+++ b/ui/src/components/Popdown/popdown.scss
@@ -17,6 +17,7 @@
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 0.1rem;
+  filter: drop-shadow(0 0 25px rgba(0, 0, 0, 0.2));
   margin-left: auto;
   margin-right: auto;
   outline: none;
