--- a/ui/src/components/loader.scss
+++ b/ui/src/components/loader.scss
@@ -3,9 +3,9 @@
   animation: loading 1.5s linear infinite;
   color: #007ee5;
   display: flex;
-  height: 1.5rem;
+  // height: 1.5rem;
   justify-content: center;
-  width: 1.5rem;
+  // width: 1.5rem;
 
   svg {
     height: 100%;
