--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: 0.25rem 0;
   width: 100%;
-
+  
   label {
     font-size: 0.9rem;
     font-weight: 700;
@@ -16,12 +16,13 @@
 
 input {
   background: #ecf5fc;
-  border-radius: 0.25rem;
   border: 1px solid #d6dee4;
+  border-radius: 0.25rem;
   color: #2b2d42;
-  font-size: 1rem;
+  font-size: 0.75rem;
+  height: 1.5rem;
   outline: none;
-  padding: 0.2rem 0.2rem;
+  padding: 0.2rem;
   width: 100%;
 
   &::placeholder {
