--- a/ui/src/components/Explorer/line-item-popdown.scss
+++ b/ui/src/components/Explorer/line-item-popdown.scss
@@ -21,7 +21,8 @@ li {
   width: 100%;
       
   &:hover {
-    background: #f2f2f2;
+    background: #007ee5;
+    color: #fff;
   }
   
   &:first-child {
