--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -101,10 +101,6 @@
   margin-left: auto;
 }
 
-.toolbar {
-  margin-left: 2rem;
-}
-
 .header {
   align-items: center;
   display: flex;
@@ -118,18 +114,23 @@
 
 .explorer-top-bar {
   align-items: center;
-  background: #f2f2f2;
+  background: #f7f7f7;
+  border-bottom: 1px solid #e5e5e5;
   display: flex;
   height: 3rem;
   justify-content: flex-start;
   margin-bottom: 1rem;
-  width: 100%;  
+  width: 100%;
 }
 
 .explorer-folder-path-container {
   min-width: 10rem;
 }
 
-.explorer-toolbar-container {
+.toolbar {
   margin-left: auto;
 }
+
+// .explorer-toolbar-container {
+//   margin-left: auto;
+// }
