--- a/ui/src/components/notification.scss
+++ b/ui/src/components/notification.scss
@@ -7,29 +7,27 @@
   display: flex;
   flex-direction: column;
   font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
-  height: 7rem;
+  height: 0;
   justify-content: flex-start;
-  left: 0;
-  margin-left: auto;
-  margin-right: auto;
   max-width: 380px;
-  min-height: 20px;
-  min-width: 100px;
+  min-height: 50px;
+  min-width: 250px;
+  padding: 1rem;
   position: fixed;
-  right: 0;
-  transform: translateY(80vh);
+  right: 1rem;
+  top: 2rem;
   z-index: 1999;
 }
 
 .notification-content {
   align-items: center;
   display: flex;
-  font-size: 0.85rem;
-  font-weight: 400;
+  font-size: 0.75rem;
+  font-weight: 500;
   height: 100%;
-  justify-content: flex-start;
+  justify-content: center;
   padding-left: 1rem;
-  width: 100%;
+  width: 80%;
 
   span {
     font-weight: 500;
