--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -107,7 +107,7 @@
   position: relative;
   
   .loader-message {
-    color: #8d99ae;
+    color: #007ee5;
     font-family: Nunito, Arial, Helvetica, sans-serif;
     font-size: 0.85rem;
     font-weight: 400;
