--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -4,7 +4,7 @@ button {
   color: #007ee5;
   cursor: pointer;
   display: flex;
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   justify-content: center;
   outline: 0;
   padding: 0.35rem 0.75rem;
@@ -13,7 +13,7 @@ button {
   > .label {
     font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
     font-size: 0.85rem;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: 0 !important;
     text-transform: capitalize;
     white-space: nowrap;
@@ -30,9 +30,15 @@ button {
 }
 
 .default {
-  background: #f2f2f2;
+  background: #fff;
+  border: 1px solid #007ee5;
   border-radius: 0.1rem;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  // box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25);
+
+  &:hover {
+    background: #007ee5;
+    color: #fff;
+  }
 }
 
 .disabled {
@@ -43,11 +49,17 @@ button {
 }
 
 .big {
-  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #fff;
+  border: 1px solid #007ee5;
   padding: 0.5rem 0.75rem;
   
   &.disabled {
     box-shadow: none;
+  }
+
+  &:hover {
+    background: #007ee5;
+    color: #fff;
   }
   
   .label {
@@ -69,7 +81,7 @@ button {
 
 i {
   height: 1.25rem;
-  margin-right: 0.3rem;
+  margin-right: 0.1rem;
   width: 1.25rem;
 }
 
