--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -20,8 +20,8 @@ header {
 .stage3-explorer-wrapper {
   border: 1px solid #cce5f9;
   border-radius: 3px;
-  height: 250px;
-  margin: 0.5rem 0;
+  height: 300px;
+  margin-top: 1rem;
   overflow: auto;
   overflow: auto;
   padding-left: 0.25rem;
@@ -48,8 +48,15 @@ img {
 }
 
 .stage3-loader-wrapper {
+  height: 1.5rem;
   margin-right: auto;
   position: relative;
+  width: 1.5rem;
+
+  svg {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .summary {
@@ -77,8 +84,8 @@ img {
   min-height: 4rem;
   
   span {
-    border-radius: 3px;
     background: #efefef;
+    border-radius: 3px;
     font-size: 0.9rem;
     padding: 0.25rem 0.5rem;
     text-align: left;
