--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -40,7 +40,7 @@
   background: #007ee5;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  height: 3rem;
+  height: 3.25rem;
   margin: 0;
   position: relative;
   width: 100%;
@@ -117,7 +117,7 @@
   background: #f7f7f7;
   border-bottom: 1px solid #e5e5e5;
   display: flex;
-  height: 3rem;
+  height: 2.75rem;
   justify-content: flex-start;
   margin-bottom: 1rem;
   width: 100%;
@@ -128,9 +128,5 @@
 }
 
 .toolbar {
-  margin-left: auto;
+  margin-right: auto;
 }
-
-// .explorer-toolbar-container {
-//   margin-left: auto;
-// }
