--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -15,11 +15,12 @@
 }
 
 input {
-  background: #e7e7e7;
+  background: #f0f0f0;
   border: 0;
   border-radius: 0.25rem;
+  box-shadow: inset 0 0 2px 2px #e7e7e7;
   color: #2b2d42;
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   height: 1.75rem;
   outline: none;
   padding: 0.2rem;
@@ -27,7 +28,7 @@ input {
   width: 100%;
 
   &::placeholder {
-    color: #000;
+    color: #a1a1a1;
     font-size: 0.85rem;
   }
 }
