--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   padding: 0.1rem 1rem;
   position: relative;
-  width: 100%;
+  width: 90%;
 }
 
 .create-folder-explorer-wrapper {
@@ -16,9 +16,9 @@
   margin: 0 auto;
   margin-top: 1rem;
   overflow-y: auto;
-  padding-left: 0.25rem;
-  padding-top: 0.25rem;
-  width: 95%;
+  // padding-left: 0.25rem;
+  // padding-top: 0.25rem;
+  width: 100%;
 }
 
 .create-folder-controls {
@@ -52,9 +52,9 @@
 
   .selected-path {
     align-items: center;
-    background: #efefef;
-    border-radius: 0.1rem;
-    color: #007ee5;
+    background: #007ee5;
+    border-radius: 0.2rem;
+    color: #fff;
     display: flex;
     font-size: 0.9rem;
     font-weight: 400;
@@ -121,6 +121,5 @@ img {
 }
 
 .create-folder-inputs {
-  margin-left: 0.5rem;
   width: 15rem;
 }
