--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -2,7 +2,6 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  max-width: 450px;
   padding: 0.1rem 0.5rem;
   width: 100%;
 
@@ -10,7 +9,6 @@
     margin: 0.25rem 0 0.25rem 0.25rem;
   }
 
-  
   img {
     max-height: 100%;
     max-width: 100%;
@@ -30,7 +28,7 @@
   justify-content: flex-end;
   margin: 2rem 0 0.5rem;
   width: 100%;
-            
+
   button {
     &:last-child {
       margin-left: 1rem;
@@ -44,7 +42,7 @@
   font-size: 1rem;
   font-weight: 400;
 }
-                
+
 .delete-message {
   align-items: flex-start;
   display: flex;
@@ -53,15 +51,21 @@
   text-align: left;
   width: 100%;
   word-break: break-word;
-                
+
   span {
     margin: 0.25rem 0;
   }
 }
-                
-                  
+
 .del-folder-loader-wrapper {
   align-self: normal;
   margin-right: auto;
   position: relative;
+}
+
+.delete-form-wrapper {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
 }
