--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -12,11 +12,11 @@ button {
 
   > .label {
     font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
-    font-size: 0.75rem;
-    font-weight: 500;
+    font-size: 0.8rem;
+    font-weight: 400;
     margin-bottom: 0 !important;
     margin-left: 0.25rem;
-    text-transform: uppercase;
+    text-transform: capitalize;
     white-space: nowrap;
   }
 }
@@ -33,7 +33,6 @@ button {
 .default {
   background: #fff;
   border: 1px solid #007ee5;
-  border-radius: 0.2rem;
 
   &:hover {
     background: #007ee5;
@@ -48,29 +47,10 @@ button {
   pointer-events: none;
 }
 
-.big {
-  background: #fff;
-  border: 1px solid #007ee5;
-  padding: 0.5rem 0.75rem;
-
-  &.disabled {
-    box-shadow: none;
-  }
-
-  &:hover {
-    background: #007ee5;
-    color: #fff;
-  }
-
-  .label {
-    font-size: 0.9rem;
-  }
-}
-
 .danger {
   background: #cb2431;
   border-radius: 0.1rem;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0.2rem;
   color: #fff;
   padding: 0.35rem 0.75rem;
 
@@ -105,12 +85,38 @@ i {
   }
 }
 
+.xl {
+  background: #fff;
+  border: 1px solid #007ee5;
+  border-radius: 0.2rem;
+  padding: 0.5rem;
+
+  &.disabled {
+    box-shadow: none;
+  }
+
+  &:hover {
+    background: #007ee5;
+    color: #fff;
+  }
+
+  .label {
+    font-size: 0.9rem;
+  }
+}
+
 .large {
   border: 0;
 
   i {
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  .label {
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: capitalize;
   }
 }
 
