--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -3,7 +3,7 @@
 }
 
 .stage2-explorer-wrapper {
-  border: 1px solid #cce5f9;
+  border: 1px solid #e5e5e5;
   border-radius: 3px;
   height: 300px;
   margin-top: 1rem;
@@ -47,7 +47,7 @@ img {
   
   .value {
     align-items: center;
-    background: #efefef;
+    background: #e5e5e5;
     border-radius: 0.1rem;
     color: #007ee5;
     display: flex;
