--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -16,7 +16,7 @@
   justify-content: center;
   margin: 0;
   margin-bottom: 0.2rem;
-  padding: 0.3rem 0;
+  padding: 0.1rem 0;
   position: relative;
   width: 100%;
   
@@ -56,7 +56,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  padding: 0.25rem 0.5rem;
+  // padding: 0.25rem 0.5rem;
   width: 100%;
 }
 
@@ -79,16 +79,21 @@
 }
 
 .close-modal {
+  align-items: center;
   background: none;
   border: 0;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: 0.25rem;
-  outline: none;
   color: #fff;
+  cursor: pointer;
+  display: flex;
+  height: 2.5rem;
+  margin-left: auto;
+  margin-right: 0.1rem;
+  outline: none;
+  width: 2.5rem;
+
+  svg {
+    height: 100%;
+    width: 100%;
+  }
 }
 
-.img-close {
-  height: 1.2rem;
-  width: 1.2rem;
-}
