--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -35,7 +35,7 @@
   padding: 0.2rem 0.25rem;
 
   &:focus {
-    background: #efefef;
+    background: #e5e5e5;
     border-radius: 0.2rem;
     outline: 0;
   }
