--- a/ui/src/components/Treeview/treeview.scss
+++ b/ui/src/components/Treeview/treeview.scss
@@ -40,7 +40,7 @@
       width: 100%;
 
       &.selected {
-        background: #efefef;
+        background: #e5e5e5;
         border-radius: 2px;
         color: #191919;
       }
