--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,5 +1,6 @@
 .explorer-container {
   height: 100%;
+  position: relative;
 }
 
 .loader-container {
@@ -29,7 +30,8 @@
 }
 
 .explorer-content {
-  min-height: 650px;
+  height: 0;
+  min-height: 750px;
 }
 
 .explorer-header {
@@ -115,7 +117,6 @@
   display: flex;
   height: 3.5rem;
   justify-content: flex-start;
-  margin-bottom: 1rem;
   width: 100%;
 }
 
@@ -125,4 +126,31 @@
 
 .toolbar {
   margin-right: auto;
+}
+
+
+.drag-overlay {
+  align-items: center;
+  background: rgba(255, 255, 255, 0.7);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+
+  .drag-overlay-icon {
+    align-items: center;
+    color: rgba(0, 126, 229, 1);
+    display: flex;
+    height: 5rem;
+    justify-content: center;
+    width: 5rem;
+
+    svg {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
