--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -5,19 +5,16 @@
   justify-content: center;
   padding: 0.1rem 1rem;
   position: relative;
-  width: 90%;
+  width: 95%;
 }
 
 .create-folder-explorer-wrapper {
   border: 1px solid #cce5f9;
   border-radius: 0.1rem;
   height: 300px;
-  height: 300px;
   margin: 0 auto;
   margin-top: 1rem;
   overflow-y: auto;
-  // padding-left: 0.25rem;
-  // padding-top: 0.25rem;
   width: 100%;
 }
 
@@ -52,9 +49,9 @@
 
   .selected-path {
     align-items: center;
-    background: #007ee5;
+    background: #e5e5e5;
     border-radius: 0.2rem;
-    color: #fff;
+    color: #191919;
     display: flex;
     font-size: 0.9rem;
     font-weight: 400;
