--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -3,11 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.1rem 0.5rem;
-  width: 100%;
-
-  > div:not(:last-child) {
-    margin: 0.25rem 0 0.25rem 0.25rem;
-  }
+  width: 95%;
 
   img {
     max-height: 100%;
@@ -28,19 +24,13 @@
   justify-content: flex-end;
   margin: 2rem 0 0.5rem;
   width: 100%;
-
-  button {
-    &:last-child {
-      margin-left: 1rem;
-    }
-  }
 }
 
 .delete-alert {
   color: #cb2431;
   font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .delete-message {
@@ -67,5 +57,6 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  margin: 1rem 0;
+  width: 80%;
 }
