--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -32,7 +32,7 @@ button {
 
 .default {
   background: #fff;
-  border: 1px solid #007ee5;
+  // border: 1px solid #007ee5;
 
   &:hover {
     background: #007ee5;
@@ -42,7 +42,6 @@ button {
 
 .disabled {
   background: #e5e5e5;
-  border: 1px solid transparent;
   filter: opacity(0.6);
   pointer-events: none;
 }
@@ -86,22 +85,21 @@ i {
 }
 
 .xl {
-  background: #fff;
-  border: 1px solid #007ee5;
-  border-radius: 0.2rem;
-  padding: 0.5rem;
+  background: #007ee5;
+  color: #fff;
+  padding: 0.5rem 0.6rem;
 
   &.disabled {
     box-shadow: none;
   }
 
   &:hover {
-    background: #007ee5;
-    color: #fff;
+    box-shadow: none;
   }
 
   .label {
-    font-size: 0.9rem;
+    font-size: 1rem;
+    margin-left: 0.2rem;
   }
 }
 
