--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -16,7 +16,7 @@
 
 input {
   background: #f4f4f4;
-  border: 0;
+  border: 1px solid #e5e5e5;
   border-radius: 0.25rem;
   box-shadow: inset 0 0 2px 2px #f0f0f0;
   color: #2b2d42;
