--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -1,5 +1,5 @@
 .stage2-container {
-  width: 90%;
+  width: 95%;
 }
 
 header {
@@ -78,7 +78,7 @@ img {
 .summary-final {
   align-items: center;
   border-radius: 0.1rem;
-  color: #fff;
+  color: #191919;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -86,8 +86,8 @@ img {
   min-height: 4rem;
   
   span {
-    background: #007ee5;
-    border-radius: .2rem;
+    background: #e5e5e5;
+    border-radius: 0.2rem;
     font-size: 0.9rem;
     padding: 0.25rem 0.5rem;
     text-align: left;
