--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -1,5 +1,5 @@
 .stage2-container {
-  width: 90%;
+  width: 95%;
 }
 
 .stage2-explorer-wrapper {
@@ -49,7 +49,8 @@ img {
     align-items: center;
     background: #e5e5e5;
     border-radius: 0.1rem;
-    color: #007ee5;
+    border-radius: 0.2rem;
+    color: #191919;
     display: flex;
     font-weight: 500;
     height: 100%;
