--- a/ui/src/components/Popdown/popdown.scss
+++ b/ui/src/components/Popdown/popdown.scss
@@ -22,8 +22,8 @@
   margin-left: auto;
   margin-right: auto;
   outline: none;
-  position: absolute;
-  top: 2.5rem;
+  position: fixed;
+  // top: 2.5rem;
   z-index: 1999;
 }
 
