--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -29,13 +29,15 @@
 
 .folder {
   align-items: center;
+  border: 1px solid transparent;
   cursor: pointer;
   display: flex;
   justify-content: center;
   padding: 0.2rem 0.25rem;
 
   &:focus {
-    background: #e5e5e5;
+    background: #f5f5f5;
+    border: 1px solid #b2d8f7;
     border-radius: 0.2rem;
     outline: 0;
   }
