--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -23,12 +23,13 @@
   .popup-title {
     color: #fff;
     display: block;
-    font-size: 1rem;
+    font-size: .85rem;
     font-weight: 400;
     max-width: 100%;
     overflow: hidden;
     padding: 0.35rem 0.75rem;
     text-align: left;
+    text-transform: uppercase;
   }
 }
 
