--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -1,103 +1,108 @@
 .login-container {
-  display: flex;
   align-items: center;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.25);
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding: 0.25rem;
-  border-radius: 5px;
-  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.25);
   width: 100%;
-  background: #fff;
 }
 
 header.app-title {
+  border-radius: 3px;
+  color: #2b2d42;
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 1rem;
-  width: 100%;
-  color: #2b2d42;
   padding: 0.75rem 0;
-  border-radius: 3px;
+  width: 100%;
 }
 
 .app-logo-ensemble {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: space-between;
   margin-bottom: 2.5rem;
   margin-top: 0.5rem;
+
   span {
-    display: block;
-    background-repeat: no-repeat;
     background-position: 50% 50%;
+    background-repeat: no-repeat;
     background-size: contain;
+    display: block;
   }
+
   .dropbox-logo {
     background-image: url(../assets/dropbox-2.svg);
     height: 3rem;
     width: 3rem;
   }
+
   .app-logo {
     background-image: url(../assets/cubes.svg);
     height: 2rem;
-    width: 2rem;
     margin-right: 1rem;
+    width: 2rem;
   }
+
   .right-arrow {
     background-image: url(../assets/arrow-right.svg);
     height: 2rem;
-    width: 2rem;
     margin-right: 1rem;
+    width: 2rem;
   }
 }
 
 .app-info-wrapper {
-  margin-bottom: 2rem;
-  width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
+  width: 100%;
+
   .app-info {
     font-size: 1.1rem;
     font-weight: 500;
-    width: 90%;
     margin: 0.5rem 0;
+    width: 90%;
   }
 }
 
 .app-content {
-  width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-bottom: 1rem;
+  width: 100%;
 }
 
 .button-grp {
-  display: flex;
   align-items: center;
-  justify-content: space-between;
+  display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 70%;
 }
 
 .dropbox-btn {
-  font-size: 1.1rem;
-  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-  border: none;
-  border-radius: 5px;
-  padding: 0.75rem;
   background: #007ee5;
-  color: #fff;
-  font-weight: 400;
-  cursor: pointer;
-  margin: 0 0.5rem;
-  width: 100%;
-  margin: 0.5rem 0;
+  border: none;
   border: 1px solid transparent;
-  outline: none;
+  border-radius: 5px;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  cursor: pointer;
+  font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin: 0 0.5rem;
+  margin: 0.5rem 0;
+  outline: none;
+  padding: 0.75rem;
+  width: 100%;
 
   &:hover {
     border: 1px solid #8d99ae;
@@ -105,8 +110,8 @@ header.app-title {
 
   &.link {
     background: #fff;
+    box-shadow: none;
     color: #007ee5;
     text-decoration: underline;
-    box-shadow: none;
   }
 }
