--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -9,9 +9,9 @@
 
 .popup-header {
   align-items: center;
-  background: #007ee5;
-  border-top-left-radius: 0.2rem;
-  border-top-right-radius: 0.2rem;
+  // background: #007ee5;
+  border-top-left-radius: 0.35rem;
+  border-top-right-radius: 0.35rem;
   display: flex;
   justify-content: center;
   margin: 0;
@@ -21,22 +21,21 @@
   width: 100%;
   
   .popup-title {
-    color: #fff;
+    color: #191919;
     display: block;
-    font-size: .85rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 700;
     max-width: 100%;
     overflow: hidden;
     padding: 0.35rem 0.75rem;
     text-align: left;
-    text-transform: uppercase;
   }
 }
 
 .popup-container {
   align-items: center;
   background: #fff;
-  border-radius: 0.2rem;
+  border-radius: 0.35rem;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -83,7 +82,7 @@
   align-items: center;
   background: none;
   border: 0;
-  color: #fff;
+  color: #007ee5;
   cursor: pointer;
   display: flex;
   height: 2.5rem;
