--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -13,20 +13,20 @@
   justify-content: center;
   padding: 0.5rem 0.75rem;
   width: 90%;
+}
 
-  .intro-message {
-    align-items: center;
-    color: #cbcbcb;
-    display: flex;
-    font-size: 1.5rem;
-    font-weight: 300;
-    height: 14rem;
-    justify-content: center;
-
-    &:hover {
-      background: #f2f2f2;
-      color: #ccc;
-    }
+.intro-message {
+  align-items: center;
+  color: #cbcbcb;
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: 300;
+  height: 14rem;
+  justify-content: center;
+  
+  &:hover {
+    background: #f2f2f2;
+    color: #ccc;
   }
 }
 
@@ -53,7 +53,7 @@
 .dropped-file {
   align-items: center;
   background: #f5f5f5;
-  border: 1px solid #cce5f9;
+  border: 1px solid #e5e5e5;
   display: flex;
   flex-direction: column;
   height: 12rem;
