--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -24,7 +24,6 @@ header {
   margin-top: 1rem;
   overflow: auto;
   overflow: auto;
-  padding-left: 0.25rem;
   padding-top: 0.25rem;
 }
 
@@ -78,7 +77,6 @@ img {
 .summary-final {
   align-items: center;
   border-radius: 0.1rem;
-  color: #191919;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -86,19 +84,21 @@ img {
   min-height: 4rem;
   
   span {
-    background: #e5e5e5;
-    border-radius: 0.2rem;
-    font-size: 0.9rem;
-    padding: 0.25rem 0.5rem;
+    background: #cce5f9;
+    border-radius: 2rem;
+    color: #191919;
+    font-size: 0.95rem;
+    font-weight: 400;
+    padding: 0.25rem 0.75rem;
     text-align: left;
     word-break: break-word;
   }
       
   i {
     color: #000;
-    height: 1rem;
+    height: 1.5rem;
     margin: 0 0.5rem;
-    width: 1rem;
+    width: 1.5rem;
   
   }
   
