--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -8,7 +8,6 @@
   height: 300px;
   margin-top: 1rem;
   overflow: auto;
-  padding-left: 0.25rem;
   padding-top: 0.25rem;
 }
 
@@ -39,7 +38,7 @@ img {
 .selected-src {
   align-items: center;
   display: flex;
-  font-size: 0.9rem;
+  font-size: 0.95rem;
   justify-content: flex-start;
   margin: 1rem 0;
   min-height: 3rem;
@@ -47,12 +46,11 @@ img {
   
   .value {
     align-items: center;
-    background: #e5e5e5;
-    border-radius: 0.1rem;
-    border-radius: 0.2rem;
+    background: #cce5f9;
+    border-radius: 2rem;
     color: #191919;
     display: flex;
-    font-weight: 500;
+    font-weight: 400;
     height: 100%;
     justify-content: flex-start;
     padding: 0.2rem 0.5rem;
