--- a/ui/src/components/NotificationsCentre/notifications.scss
+++ b/ui/src/components/NotificationsCentre/notifications.scss
@@ -138,7 +138,7 @@ i {
 
   .title {
     color: #007ee5;
-    font-size: .85rem;
+    font-size: 0.85rem;
     font-weight: 400;
     padding-left: 0.5rem;
     white-space: nowrap;
