--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -10,7 +10,7 @@
   width: 100%;
 }
 
-header.app-title {
+.app-title {
   border-radius: 3px;
   color: #2b2d42;
   font-size: 1.5rem;
@@ -35,24 +35,10 @@ header.app-title {
   }
 
   .dropbox-logo {
-    background-image: url(../assets/dropbox-2.svg);
+    background-image: url("../assets/dropbox-2.svg");
     height: 3rem;
     width: 3rem;
   }
-
-  // .app-logo {
-  //   background-image: url(../assets/cubes.svg);
-  //   height: 2rem;
-  //   margin-right: 1rem;
-  //   width: 2rem;
-  // }
-
-  // .right-arrow {
-  //   background-image: url(../assets/arrow-right.svg);
-  //   height: 2rem;
-  //   margin-right: 1rem;
-  //   width: 2rem;
-  // }
 }
 
 .app-info-wrapper {
