--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -1,7 +1,7 @@
 .login-container {
   align-items: center;
   background: #fff;
-  border-radius: 5px;
+  border-radius: 0.3rem;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -35,7 +35,7 @@
   }
 
   .dropbox-logo {
-    background-image: url("../assets/dropbox-2.svg");
+    background-image: url('../assets/dropbox-2.svg');
     height: 3rem;
     width: 3rem;
   }
