--- a/ui/src/components/loader.scss
+++ b/ui/src/components/loader.scss
@@ -3,6 +3,13 @@
   color: #007ee5;
   display: flex;
   justify-content: center;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 
   svg {
     height: 100%;
@@ -11,7 +18,10 @@
 }
 
 .spinner {
+  align-items: center;
   animation: loading 1.5s linear infinite;
+  display: flex;
+  justify-content: center;
 }
 
 @keyframes loading {
